# QtBasedWorkFlow

./: .gitignore  .gitmodules  CMakeLists.txt  ImageNodeEditor.slnx  Problem.html  README.en.md  README.md  agent.md  log.md  solution.md  struct.md
ImageNodeEditor/: ImageNodeEditor.vcxproj  ImageNodeEditor.vcxproj.filters  main.cpp
ImageNodeEditor/GeneratedFiles/: moc_CanvasTabBar.cpp  moc_WorkbenchHostWidget.cpp  moc_WorkbenchModels.cpp  qrc_codicons_assets.cpp  qrc_workbench_qml.cpp  regen.bat
ImageNodeEditor/app/: CommandLineApp.cpp  CommandLineApp.h  CommandLineRunner.cpp  CommandLineRunner.h
ImageNodeEditor/core/: Edge.h  NodeData.h  NodeLabel.h  NodeParameter.h  PortType.h  Result.h
ImageNodeEditor/gui/: AppIcon.cpp  AppIcon.h  AppTheme.cpp  AppTheme.h  CanvasTabBar.cpp  CanvasTabBar.h  ElaCompat.h  MainWindow.cpp  MainWindow.h  MiniMapWidget.h  NativeWindowChrome.cpp  NativeWindowChrome.h  NativeWindowChrome_mac.mm  PreviewWidgets.h  TerminalPanel.h  WorkbenchHostWidget.cpp  WorkbenchHostWidget.h  WorkbenchModels.cpp  WorkbenchModels.h  WorkflowCanvas.cpp  WorkflowCanvas.h  WorkflowCommands.cpp  WorkflowCommands.h  WorkflowDiffDialog.h  WorkflowNodeDelegate.cpp  WorkflowNodeDelegate.h  WorkflowNodePainter.cpp  WorkflowNodePainter.h
ImageNodeEditor/nodes/: BasicNodes.cpp  BasicNodes.h  ImageNode.cpp  ImageNode.h  MacroNode.cpp  MacroNode.h  NodeFactory.cpp  NodeFactory.h
ImageNodeEditor/processing/: ImageProcessors.cpp  ImageProcessors.h
ImageNodeEditor/qml/: WorkbenchActivityBar.qml  WorkbenchEditorHeader.qml  WorkbenchIcon.qml  WorkbenchQuickAccess.qml  WorkbenchSidebar.qml  WorkbenchStatusBar.qml  WorkbenchTitleBar.qml  WorkbenchTooltip.qml  workbench.qrc
ImageNodeEditor/resources/samples/: input.ppm
ImageNodeEditor/resources/workflows/: sample.json
ImageNodeEditor/util/: PathUtils.cpp  PathUtils.h
ImageNodeEditor/workflow/: ExecutionEngine.cpp  ExecutionEngine.h  WorkflowGraph.cpp  WorkflowGraph.h  WorkflowHistory.cpp  WorkflowHistory.h  WorkflowSerializer.cpp  WorkflowSerializer.h  WorkflowValidator.cpp  WorkflowValidator.h
build-prototypes/cmake/: qlementineConfig.cmake  qlementineConfigVersion.cmake  qlementineTargets.cmake
build-prototypes/experiments/gui_prototypes/: ImageNodeEditorAdsPrototype  ImageNodeEditorQtNodesPrototype
build-prototypes/experiments/gui_prototypes/ImageNodeEditorAdsPrototype_autogen/: deps
build-prototypes/experiments/gui_prototypes/ImageNodeEditorPrototypeSupport_autogen/: deps  moc_predefs.h
build-prototypes/experiments/gui_prototypes/ImageNodeEditorQtNodesPrototype_autogen/: deps  moc_predefs.h
build-prototypes/experiments/gui_prototypes/ImageNodeEditorStyleShellPrototype_autogen/: deps  moc_predefs.h
poster/: design-philosophy.md  poster.pptx  poster_light_source.html  poster_source.html
